--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,21 @@
      </developer>
  </developers>
 
- <distributionManagement>
-     <repository>
-         <id>repo1</id>
-         <name>Release</name>
-         <url>file://C:/123</url>
-     </repository>
- </distributionManagement>
+ <!--<distributionManagement>-->
+     <!--<repository>-->
+         <!--<id>repo1</id>-->
+         <!--<name>Release</name>-->
+         <!--<url>file://C:/123</url>-->
+     <!--</repository>-->
+ <!--</distributionManagement>-->
+
+    <distributionManagement>
+        <repository>
+            <id>safe_releases</id>
+            <name>safe_releases</name>
+            <url>http://140.143.30.156:8081/repository/java/</url>
+        </repository>
+    </distributionManagement>
 
  <properties>
      <skipTests>true</skipTests>
@@ -260,8 +268,8 @@
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
          <configuration>
-           <source>1.6</source>
-           <target>1.6</target>
+           <source>1.8</source>
+           <target>1.8</target>
            <optimize>true</optimize>
            <showDeprecations>true</showDeprecations>
          </configuration>
