--- a/pom.xml
+++ b/pom.xml
@@ -93,37 +93,37 @@
   <dependency>
   	<groupId>io.netty</groupId>
   	<artifactId>netty-buffer</artifactId>
-  	<version>4.1.25.Final</version>
+      <version>4.1.26.Final</version>
   </dependency>
   <dependency>
   	<groupId>io.netty</groupId>
   	<artifactId>netty-common</artifactId>
-  	<version>4.1.25.Final</version>
+      <version>4.1.26.Final</version>
   </dependency>
   <dependency>
   	<groupId>io.netty</groupId>
   	<artifactId>netty-transport</artifactId>
-       <version>4.1.25.Final</version>
+      <version>4.1.26.Final</version>
   </dependency>
   <dependency>
   	<groupId>io.netty</groupId>
   	<artifactId>netty-handler</artifactId>
-  	<version>4.1.25.Final</version>
+      <version>4.1.26.Final</version>
   </dependency>
   <dependency>
   	<groupId>io.netty</groupId>
   	<artifactId>netty-codec-http</artifactId>
-  	<version>4.1.25.Final</version>
+      <version>4.1.26.Final</version>
   </dependency>
   <dependency>
   	<groupId>io.netty</groupId>
   	<artifactId>netty-codec</artifactId>
-  	<version>4.1.25.Final</version>
+      <version>4.1.26.Final</version>
   </dependency>
   <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-transport-native-epoll</artifactId>
-        <version>4.1.25.Final</version>
+      <version>4.1.26.Final</version>
   </dependency>
 
   <dependency>
@@ -160,13 +160,13 @@
   <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>[2.5,)</version>
+      <version>5.0.7.RELEASE</version>
       <scope>provided</scope>
   </dependency>
   <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>[2.5,)</version>
+      <version>5.0.7.RELEASE</version>
       <exclusions>
          <exclusion>
              <groupId>commons-logging</groupId>
@@ -180,13 +180,13 @@
     <dependency>
         <groupId>org.redisson</groupId>
         <artifactId>redisson</artifactId>
-        <version>2.12.0</version>
+        <version>3.7.3</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>com.hazelcast</groupId>
         <artifactId>hazelcast-client</artifactId>
-        <version>3.4.3</version>
+        <version>3.10.2</version>
         <scope>provided</scope>
     </dependency>
  </dependencies>
