--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
-               <version>1.4</version>
+                 <version>1.6</version>
                <executions>
                  <execution>
                    <id>sign-artifacts</id>
@@ -129,7 +129,7 @@
   <dependency>
       <groupId>org.jmockit</groupId>
       <artifactId>jmockit</artifactId>
-      <version>1.39</version>
+      <version>1.42</version>
       <scope>test</scope>
   </dependency>
   <dependency>
@@ -142,7 +142,7 @@
   <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.21</version>
+      <version>1.8.0-beta2</version>
   </dependency>
 
   <dependency>
@@ -186,7 +186,7 @@
     <dependency>
         <groupId>com.hazelcast</groupId>
         <artifactId>hazelcast-client</artifactId>
-        <version>3.10.2</version>
+        <version>3.11-BETA-1</version>
         <scope>provided</scope>
     </dependency>
  </dependencies>
@@ -197,7 +197,7 @@
       <plugin>
    	<groupId>org.apache.maven.plugins</groupId>
    	<artifactId>maven-javadoc-plugin</artifactId>
-   	<version>3.0.0</version>
+          <version>3.0.1</version>
    	<executions>
              <execution>
                <id>attach-javadocs</id>
@@ -217,7 +217,7 @@
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-eclipse-plugin</artifactId>
-           <version>2.9</version>
+           <version>2.10</version>
            <configuration>
                <downloadSources>true</downloadSources>
                <forceRecheck>true</forceRecheck>
@@ -227,7 +227,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
-          <version>3.0.1</version>
+            <version>3.10.0</version>
           <executions>
             <execution>
               <phase>verify</phase>
@@ -248,7 +248,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.11</version>
+            <version>2.11</version>
           <executions>
             <execution>
               <phase>verify</phase>
@@ -266,7 +266,7 @@
 
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
-         <version>3.7.0</version>
+           <version>3.8.0</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
